# clean-architecture

./: Dockerfile  api_types.py  base_entity.py  base_use_case.py  docker-compose.yaml  main.py  pyproject.toml  setup_db.py  texxt.txt
controller/: author.py  book.py  discipline.py  subject.py  translator.py
entities/: author.py  book.py  discipline.py  subject.py
factories/: book.py  discipline.py  subject.py
models/: __init__.py  author.py  base.py  book.py  discipline.py  subject.py
reber/: api_types.py  main.py  setup_db.py
reber/controller/: author.py  base.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
reber/entities/: author.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
reber/factories/: author.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
reber/models/: __init__.py  author.py  base.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
reber/repositories/: author.py  base.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
reber/routers/: author.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
reber/use_cases/: author.py  base.py  book.py  discipline.py  interlanguage_discipline.py  translator.py
repositories/: author.py  base.py  book.py  discipline.py  interlanguage_discipline.py  subject.py  translator.py
routers/: author.py  book.py  discipline.py  interlanguage_discipline.py  subject.py  translator.py
use_cases/: author.py  book.py  discipline.py  interlanguage_discipline.py  subject.py  translator.py
(+7 files in other folders)
