[tool.poetry]
name = "reber"
version = "0.1.0"
description = ""
authors = ["Muzaffer Cıkay <muzaffer.cikay@akinon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
peewee = "3.17.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipdb = "0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
